Fix even spacing of top-level elements by skipping key dummy

--- a/static/style.css
+++ b/static/style.css
@@ -11,9 +11,12 @@ body {
   height: 100vh;
   > div {
     height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    > :not(:is(#dummy-key-handler)) {
+      height: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
   }
 }
 
